# blockchain-prototyping-sose2025

./: .secrets.template
.github/workflows/: deploy.yml
Data Fetch (ZKTLS)/: README.md
Data Fetch (ZKTLS)/ZK/: webpack.js
Data Fetch (ZKTLS)/ZK/src/: app.tsx  generateProof.ts
Data Fetch (ZKTLS)/tls-frontend/: Layout.js  package-lock.json  package.json
Data Fetch (ZKTLS)/tls-frontend/components/: InfoBox.jsx  ProofDisplay.jsx  ProofForm.jsx  ProofVerifier.jsx
Data Fetch (ZKTLS)/tls-frontend/pages/: index.js
Data Fetch (ZKTLS)/tls-notary/: .dockerignore  Dockerfile.frontend  Dockerfile.proxy  Makefile  Makefile.vars  README.md  docker-compose.yml  package-lock.json  package.json
Data Fetch (ZKTLS)/tls-notary/ZK/: .env  (+8 more)
Lending (BC) + frontend/: hardhat.config.js.bak  package-lock.json
Lending (BC) + frontend/loan-management/: .gitignore  .solcover.js  BLOCK_TAG_ERROR_SOLUTION.md  DEPLOYMENT_SYNC_ISSUE.md  FINAL_MOCK_TRANSACTIONS_FIX.md  METAMASK-SETUP.md  MOCK_TRANSACTIONS_DEBUG_COMPLETE.md  MOCK_TRANSACTIONS_FIX.md  NULLIFIER_REGISTRY_FIX.md  README.md  TIMELOCK_PERMISSION_FIX.md  TROUBLESHOOTING.md  USERHISTORY_IMPLEMENTATION.md  changes.patch  hardhat.config.js  mock-dev.sh  package-lock.json  package.json  start-dev.sh  stop-dev.sh  userhistory-full.patch
phala-tee/: Makefile  docker-compose.phala.yml  docker-compose.yml
phala-tee/dstack-service/: .env.template  .gitignore  Dockerfile  Makefile  package.json  tsconfig.json
phala-tee/tlsn-verifier/: Cargo.toml  Makefile
tlsn-verifier/: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.phala.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
tlsn-verifier/.github/workflows/: deploy.yml
tlsn-verifier/samples/: verify-proof-response.json
tlsn-verifier/samples/attestation/: attestation-request.http  attestation-response.json
tlsn-verifier/samples/health/: health-request.http
tlsn-verifier/samples/verify-proof/: verify-proof-request.http  verify-proof-response.json
tlsn-verifier/src/: attestation.rs  auth.rs  config.rs  key_manager.rs  main.rs  routes.rs  tappd_service.rs  types.rs  utils.rs  verifier.rs
(+488 files in other folders)
