[package]
name = "tlsn-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.10", package = "tlsn-core" }
hex = "0.4"
bincode = "1.3"
serde_json = "1"
chrono = "0.4.41"
futures-util = "0.3.31"
regex = "1"
