[package]
name = "tlsn-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.10", package = "tlsn-core" }
bincode = "1.3"
serde_json = "1"
chrono = "0.4.41"
futures-util = "0.3.31"
regex = "1"
sha3 = "0.10"
sha2 = "0.10.9"
hex = "0.4"
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand = "0.8"
once_cell = "1.19"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http-client-unix-domain-socket = "0.1.1"
anyhow = "1.0.98"
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
